--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "App.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon App.js"
   },
   "author": "",
   "license": "ISC",
